syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "gitlab.com/IKostarev/todo/api/protos/todo";

package todoservice;

message TodoID {
  int32 id = 1;
}

message CreatedAt {
  google.protobuf.Timestamp created_at = 1;
}

message UpdatedAt {
  google.protobuf.Timestamp updated_at = 1;
}

message DateFrom {
  google.protobuf.Timestamp date_from = 1;
}

message DateTo {
  google.protobuf.Timestamp date_to = 1;
}

message TodoDTO {
  int32 id = 1;
  int32 created_by = 2;
  int32 assignee = 3;
  string description = 4;
  CreatedAt created_at = 5;
  UpdatedAt updated_at = 6;
}

message CreateTodoDTO {
  int32 id = 1;
  int32 created_by = 2;
  int32 assignee = 3;
  string description = 4;
  CreatedAt created_at = 5;
  UpdatedAt updated_at = 6;
}

message UpdateTodoDTO {
  int32 id = 1;
  int32 updated_by = 2;
  int32 assignee = 3;
  string description = 4;
  UpdatedAt updated_at = 5;
}

message GetTodosDTO {
  int32 created_by = 1;
  int32 assignee = 2;
  DateFrom date_from = 3;
  DateTo date_to = 4;
}

service TodoService {
  rpc CreateToDo(CreateTodoDTO) returns (TodoID);

  rpc UpdateToDo(UpdateTodoDTO) returns (TodoID);

  rpc GetToDos(TodoID) returns (TodoDTO);

  rpc GetToDo(TodoID) returns (TodoDTO);

  rpc DeleteToDo(TodoID) returns (google.protobuf.Empty);
}
